# platform.core.uifw.dali-core

./: .gitignore  0001-Atlas-fix-the-order-of-allocation-and-ResourceId-que.patch  0001-Keep-track-of-Bitmap-data-ownership.patch  0002-Adding-thread-join-to-the-mutex-test-case.patch  0003-Dont-include-dali-core.h-inside-dali-core.patch  0004-Change-SLP-to-Tizen.patch  0005-Fix-a-rendering-issue-of-the-mesh-which-has-vertex-c.patch  0006-Actor-s-Transformation-API-Cleanup.patch  0007-Correct-comment-of-Actor-SetKeyboardFocusable.patch  0008-DALi-Version-1.0.34.patch  0009-Fix-IsPowerOfTwo-can-be-overflowed-return-value.patch  0010-Support-animatable-property-registration-during-type.patch  README  README.Android  dali-core.patch  dali.manifest-smack  project.config
automated-tests/: CMakeLists.txt  CMakeLists.txt.in  README.md  README_CTs.md  build.sh  coverage.sh  execute.sh  patch-coverage.pl  tet_scen
automated-tests/Cts/: CMakeLists.txt  Cts-dali-core.cpp  Cts-dali-core.h  test-utilities.h
automated-tests/Cts/property-notification/: CtsDali-property-notification-common.cpp  CtsDali-property-notification-common.h  CtsDali-property-notification-impl.h  CtsDali-property-notification.cpp
automated-tests/dali-internal-test-suite/: utc-MODULE-CLASS.cpp.in
automated-tests/dali-internal-test-suite/image-factory/: utc-Dali-ImageFactory.cpp
automated-tests/dali-internal-test-suite/material/: utc-Dali-Material.cpp
automated-tests/dali-internal-test-suite/resource-manager/: utc-DaliInternal-ResourceClient.cpp
automated-tests/dali-internal-test-suite/text/: utc-DaliInternal-Font.cpp
automated-tests/dali-test-suite/: utc-MODULE-CLASS.cpp.in
automated-tests/dali-test-suite-utils/: dali-test-suite-internal-utils.h  dali-test-suite-utils.h  mesh-builder.h  test-application.h  test-dynamics.h  test-gesture-manager.h  test-gl-abstraction.h  test-gl-sync-abstraction.h  test-native-image.h  test-platform-abstraction.h  test-render-controller.h  test-trace-call-stack.h
automated-tests/dali-test-suite/actors/: .gitignore  file.list  tslist  utc-Dali-Actor.cpp  utc-Dali-BaseHandle.cpp  utc-Dali-CameraActor.cpp  utc-Dali-Constrainable.cpp  utc-Dali-CustomActor.cpp  utc-Dali-CustomObject.cpp  utc-Dali-Handle.cpp  utc-Dali-ImageActor.cpp  utc-Dali-Layer.cpp  utc-Dali-LightActor.cpp  utc-Dali-MeshActor.cpp  utc-Dali-Model.cpp  utc-Dali-RenderableActor.cpp  utc-Dali-Stage.cpp  utc-Dali-TextActor.cpp
automated-tests/dali-test-suite/animation/: utc-Dali-ActiveConstraint.cpp  (+3 more)
automated-tests/packaging/: core-Cts-tests.spec
automated-tests/scripts/: retriever.sh  tcbuild.sh
automated-tests/src/: CMakeLists.txt  Cts-dali-core.cpp
(+1641 files in other folders)
