include(CheckIncludeFileCXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(tct_coreapi_utc)

INCLUDE(FindPkgConfig)
SET(BIN_DIR "/opt/usr/bin")

SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ")

CHECK_INCLUDE_FILE_CXX(tr1/functional HAVE_TR1_FUNCTIONAL)
CHECK_INCLUDE_FILE_CXX(boost/function.hpp HAVE_BOOST_FUNCTIONAL_HPP)

if(HAVE_TR1_FUNCTIONAL)
  SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DHAVE_TR1_FUNCTIONAL")
endif(HAVE_TR1_FUNCTIONAL)

if(HAVE_BOOST_FUNCTIONAL_HPP)
  SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DHAVE_BOOST_FUNCTIONAL_HPP")
endif(HAVE_BOOST_FUNCTIONAL_HPP)

if(NOT (HAVE_TR1_FUNCTIONAL OR HAVE_BOOST_FUNCTIONAL))
  MESSAGE(FATAL_ERROR, "Needs tr1 or boost functional")
endif(NOT (HAVE_TR1_FUNCTIONAL OR HAVE_BOOST_FUNCTIONAL))

INCLUDE_DIRECTORIES(
	src/common
)

ADD_SUBDIRECTORY(src)
